Change the email

--- a/index.html
+++ b/index.html
@@ -1071,8 +1071,8 @@
 
                     <div class="text-gray-700 space-y-4">
                         <p><strong>Name:</strong> Muhammad Usama</p>
-                        <p><strong>Email:</strong> <a href="mailto:muhammadusama2486@gmail.com"
-                                class="text-[#293519]hover:underline">muhammadusama2486@gmail.com</a></p>
+                        <p><strong>Email:</strong> <a href="mailto:muhammadusama2486@outlook.com"
+                                class="text-[#293519]hover:underline">muhammadusama2486@outlook.com</a></p>
                         <p><strong>Phone:</strong> <a href="tel:+923074460609" class="text-[#293519]hover:underline">+92
                                 307 4460609</a></p>
                         <p><strong>Location:</strong> Lahore, Pakistan</p>
