--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                         </h3>
 
                         <p class="text-lg text-gray-600 mb-4">
-                            I'm a Senior Flutter Developer with over 3+ years of experience building high-performance,
+                            I'm a Senior Flutter Developer with over 4+ years of experience building high-performance,
                             cross-platform mobile apps. My expertise lies in developing scalable and maintainable
                             applications
                             using Flutter for both Android and iOS platforms.
@@ -484,14 +484,27 @@
                     </div>
                     <div>
                         <h3 class="text-xl font-semibold text-gray-800">Flutter Team Lead</h3>
-                        <p class="text-indigo-600">Orbion Technologies | 2022 – current</p>
+                        <p class="text-indigo-600">Orbion Technologies | Sep 2022 – Oct 2025</p>
                         <p class="text-gray-600 mt-2">Led a team of mobile developers, building and maintaining
                             production-ready Flutter apps with scalable architecture, CI/CD integration, and performance
                             optimization.</p>
                     </div>
                 </div>
 
-                <!-- Experience 3: Corvit Systems -->
+                <!-- Experience 3: Project Development Manager -->
+                <div class="flex gap-6">
+                    <div class="flex-shrink-0 w-12 h-12 rounded-full bg-[#1e2a12] flex items-center justify-center">
+                        <i class="fas fa-laptop-code text-indigo-600"></i>
+                    </div>
+                    <div>
+                        <h3 class="text-xl font-semibold text-gray-800">Flutter Project Manager (Freelance)</h3>
+                        <p class="text-dark-600">Logic Loomer (Pvt) Ltd. | Jul 2025 – Oct 2025</p>
+                        <p class="text-gray-600 mt-2">Managed multiple Flutter projects, ensuring timely delivery and
+                            adherence to best practices in mobile development.</p>
+                    </div>
+                </div>
+
+                <!-- Experience 4: Corvit Systems -->
                 <div class="flex gap-6">
                     <div class="flex-shrink-0 w-12 h-12 rounded-full bg-yellow-100 flex items-center justify-center">
                         <i class="fas fa-code text-yellow-500"></i>
